--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 encoding: utf-8
-url: http://localhost/public/workinair/
+baseurl: /windea.github.io
 name: Work in Air 我可爱
 description: 随时随地享受工作的快乐
