--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ encoding: utf-8
 url: http://www.iamyuchao.com
 name: I am Yu Chao
 author: Lucas Yu
+qq: 87792280
+weibo: windea
 pygments: true
 safe: true
 paginate: 20
