--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: http://www.iamyuchao.com
 name: I am Yu Chao
 author: Lucas Yu
 qq: 87792280
-weibo: windea
+weibo: 1714379531
 github: windea
 pygments: true
 safe: true
