--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "一切都是最好的安排"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar-windea.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
