--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 
 # SNS settings
-RSS: false
+RSS: true
 weibo_username:     windea
-zhihu_username:     windea
+# zhihu_username:     windea
 github_username:    windea
-#twitter_username:  huxpro
-facebook_username:  windea
+# twitter_username:  huxpro
+# facebook_username:  windea
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -60,11 +60,11 @@ duoshuo_share: true                     # set to false if you want to use Commen
 
 # Analytics settings
 # Baidu Analytics 
-# ba_track_id: [your track id]
+ba_track_id: [your track id]
 
 # Google Analytics
-#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-#ga_domain: huangxuan.me
+# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+# ga_domain: huangxuan.me
 
 
 
